Removed console logging from app.js.  Added functionality to update my page every 1 minute to app.js.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <div class="form-group">
                         <label for="first">
-                            <h6 class="font-weight-bold">First Train Time (HH:mm - military time)</h6>
+                            <h6 class="font-weight-bold">First Train Time (HH:mm - 24HR Time)</h6>
                         </label>
                         <input type="text" class="form-control" id="first" placeholder="12:00">
                         <span id="invalid_first"></span>
