Updated Exit link in index.html.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <nav class="nav justify-content-center">
                         <a class="nav-link text-white active" href="#trains"><h6>Add a Train</h6></a>
-                        <a class="nav-link text-white " id="exit" href="https://plkgit.github.io/Bootstrap-Portfolio/portfolio.html"><h6>Exit</h6></a>
+                        <a class="nav-link text-white " id="exit" href="https://www.pamkelly.com/portdev.html"><h6>Exit</h6></a>
                       </nav>
                 </div>
             </div>
